<resources>
    <string name="app_name">GUZZI</string>
    <string name="title_home">首页</string>
    <string name="title_anli">推荐</string>
    <string name="title_star">收藏</string>
    <string name="title_me">用户</string>

    <string name="personal_name">用户名</string>
    <string name="personal_page">个人主页></string>
    <string name="personal_collect">我的收藏</string>
    <string name="personal_HaiTao">海淘订单</string>
    <string name="personal_contribute">我的投稿</string>
    <string name="personal_discuss">我的讨论</string>

    <!--商品首页-->
    <string name="qr_code_text">二维码</string>
    <string name="scan_qr_code_warn">将二维码放入框内，即可自动扫描</string>
    <string name="scan_qr_code_from_photo_wrong">没有找到二维码</string>
    <string name="album_text">相册</string>
    <string name="identify_qr">识别二维码</string>
    <string name="cancel">取消</string>
    <string name="save_pic">保存图片</string>
    <string name="home_hot_cate">热销产品</string>
    <string name="home_recommend">产品推荐</string>


    <string name="fancy_qr_code_theme_name_yellow">黄</string>
    <string name="fancy_qr_code_theme_name_green">绿</string>
    <string name="fancy_qr_code_theme_name_red">红</string>
    <string name="fancy_qr_code_theme_name_blue">蓝</string>
    <string name="fancy_qr_code_theme_name_purple">紫</string>
    <string name="fancy_qr_code_theme_name_black">黑</string>

    <!--开启画面-->
    <string name="app_description">在线购物，享你所想！</string>

    <!-- 商品详情页面 -->
    <string name="commodity_detail_title">商品详情</string>
    <string name="commodity_detail_info">产品信息</string>
    <string name="commodity_detail_service">服务</string>
    <string name="commodity_btn_like">收藏</string>

</resources>
