<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/true_white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/personal_background_red"
            android:orientation="vertical"
            android:paddingTop="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/account"
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    android:src="@drawable/ic_account" />

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center_vertical"
                    android:padding="10dp"
                    android:text="@string/personal_name"
                    android:textColor="@color/true_white"
                    android:textSize="@dimen/font_size_18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/personal_homepage"
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    android:gravity="center"
                    android:paddingRight="20dp"
                    android:text="@string/personal_page"
                    android:textColor="@color/true_white"
                    android:textSize="@dimen/font_size_20sp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp"
                android:paddingBottom="25dp">

                //收藏

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp">

                    <TextView
                        android:id="@+id/collect_num"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingBottom="5dp"
                        android:text="0"
                        android:textColor="@color/true_white"
                        android:textSize="@dimen/font_size_20sp" />

                    <TextView
                        android:id="@+id/collect"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/personal_collect"
                        android:textColor="@color/true_white"
                        android:textSize="@dimen/font_size_18sp" />

                </LinearLayout>

                //海淘

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp">

                    <TextView
                        android:id="@+id/HaiTao_num"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingBottom="5dp"
                        android:text="0"
                        android:textColor="@color/true_white"
                        android:textSize="@dimen/font_size_20sp" />

                    <TextView
                        android:id="@+id/HaiTao"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/personal_HaiTao"
                        android:textColor="@color/true_white"
                        android:textSize="@dimen/font_size_18sp" />
                </LinearLayout>

                //投稿

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp">

                    <TextView
                        android:id="@+id/contribute_num"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingBottom="5dp"
                        android:text="0"
                        android:textColor="@color/true_white"
                        android:textSize="@dimen/font_size_20sp" />

                    <TextView
                        android:id="@+id/contribute"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/personal_contribute"
                        android:textColor="@color/true_white"
                        android:textSize="@dimen/font_size_18sp" />
                </LinearLayout>

                //讨论

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp">

                    <TextView
                        android:id="@+id/discuss_num"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingBottom="5dp"
                        android:text="0"
                        android:textColor="@color/true_white"
                        android:textSize="@dimen/font_size_20sp" />

                    <TextView
                        android:id="@+id/discuss"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/personal_discuss"
                        android:textColor="@color/true_white"
                        android:textSize="@dimen/font_size_18sp" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_margin="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">


                <ImageView
                    android:id="@+id/shopping"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_shopping" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/true_black"
                    android:text="商品比价"
                    android:paddingTop="5dp"
                    android:textSize="@dimen/font_size_14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/mall"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_mall" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/true_black"
                    android:text="购物商城"
                    android:paddingTop="5dp"
                    android:textSize="@dimen/font_size_14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/function"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_function" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/true_black"
                    android:text="功能介绍"
                    android:paddingTop="5dp"
                    android:textSize="@dimen/font_size_14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/comment"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_comment" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/true_black"
                    android:text="用户反馈"
                    android:paddingTop="5dp"
                    android:textSize="@dimen/font_size_14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/setting"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_settings" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/true_black"
                    android:text="我的设置"
                    android:paddingTop="5dp"
                    android:textSize="@dimen/font_size_14sp" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>