<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">


    <RelativeLayout
        android:id="@+id/detail_title_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/scan_result_dots">

        <LinearLayout
            android:id="@+id/detail_title_left"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:gravity="right">

            <ImageView
                android:id="@+id/detail_back"
                android:layout_width="20dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:src="@drawable/back" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@+id/detail_back"
                android:gravity="center"
                android:text="@string/commodity_detail_title"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />
        </LinearLayout>

    </RelativeLayout>

    <ScrollView
        android:id="@+id/ScrollView_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/detail_title_layout"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/detail_img_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/detail_img"
                    android:layout_width="match_parent"
                    android:layout_height="380dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/promes_view1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/detail_img_layout"
                android:orientation="horizontal">
                <View
                    android:id="@+id/detail_line"
                    android:layout_width="match_parent"
                    android:layout_height="10dp"

                    android:background="@color/TableLinecolor" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/detail_line"
                    android:background="@color/TableLinecolor" />

                <View
                    android:id="@+id/detail_line2"
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:layout_below="@+id/detail_line"
                    android:background="@color/TableLinecolor" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/detail_product_layout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/promes_view1"
                android:orientation="horizontal">

                <View
                    android:layout_width="3dp"
                    android:layout_height="match_parent"
                    android:background="#EE0000" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingLeft="5dp"
                    android:text="@string/commodity_detail_info"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorGrey"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/detail_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/detail_product_layout"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/detail_name"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/true_black"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/detail_price"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:textSize="24dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/promes_view2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/detail_layout"
                android:orientation="horizontal">
                <View
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:background="@color/TableLinecolor" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/detail_line"
                    android:background="@color/TableLinecolor" />
            </LinearLayout>



            <LinearLayout
                android:id="@+id/detail_service_layout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/promes_view2"
                android:orientation="horizontal">

                <View
                    android:layout_width="3dp"
                    android:layout_height="match_parent"
                    android:background="#EE0000" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingLeft="5dp"
                    android:text="@string/commodity_detail_service"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorGrey"/>
            </LinearLayout>

            <View
                android:id="@+id/detail_line9"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/detail_service_layout"
                android:background="@color/TableLinecolor" />

            <LinearLayout
                android:id="@+id/detail_service"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/detail_line9"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:paddingRight="10dp"
                android:paddingBottom="5dp">

                <Button
                    android:id="@+id/btn_buy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:text="@string/commodity_btn_like"
                    android:textColor="@color/true_white"
                    android:theme="@style/PrimaryButton" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>

